--- a/ForAllTheCodes.css
+++ b/ForAllTheCodes.css
@@ -7,6 +7,31 @@ body{
     background-color: pink;
   }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
+}
+
+
   .picleft{
 
     float:left;
@@ -52,6 +77,8 @@ body{
     position: relative;
     left: 6.25em;
     right: 6.25em;
+    padding-right: 10%;
+    padding-left: 30%;
 }
 
  footer {
